--- a/templates/index.html
+++ b/templates/index.html
@@ -34,9 +34,25 @@
     <button id="scroll-to-top" aria-label="Прокрутить наверх">
         <i class="fas fa-arrow-up"></i>
     </button>
+    
+    <section id="hero-slider" class="slider-section">
+        <div class="slider-container">
+            <div class="slide fade" style="background-image: url('static/slide1.png');">
+                <div class="slide-caption">Добро пожаловать в Гимназию №6</div>
+            </div>
+            <div class="slide fade" style="background-image: url('static/slide2.png');">
+                <div class="slide-caption">Высокие стандарты образования</div>
+            </div>
+            <div class="slide fade" style="background-image: url('static/slide3.png');">
+                <div class="slide-caption">Воспитание патриотов и граждан</div>
+            </div>
+        </div>
+        <div class="slider-dots-container">
+            </div>
+    </section>
 
     <section id="about" class="section about">
-        <div class="section-content">
+        <div class="section-content show">
             <h1>Гимназия №6 г. Минска</h1>
             <p>
                 Государственное учреждение образования <strong>«Гимназия №6 г. Минска»</strong> — это современное учебное заведение с богатой историей, основанное на базе общеобразовательной школы №6 в 1991 году. Гимназия известна высоким уровнем образования, с 2024 года ее возглавляет директор <strong>Козак Наталья Балеславовна</strong>.
@@ -119,7 +135,6 @@
             <p>
                 <strong>Официальный сайт:</strong> <a href="http://gymn6.minsk.edu.by/" target="_blank">http://gymn6.minsk.edu.by/</a>
             </p>
-            
         </div>
     </section>
 
