--- a/templates/index.html
+++ b/templates/index.html
@@ -26,13 +26,13 @@
     <section id="about" class="section about">
         <h1>Гимназия №6 г. Минска</h1>
         <p>
-            Государственное учреждение образования <strong>«Гимназия №6 г. Минска»</strong> — это современное учебное заведение с богатой историей, основанное на базе общеобразовательной школы №6 в 1991 году. Гимназия известна высоким уровнем образования, с 2024 года ее возглавляет директор <strong>Козак Наталья Балеславовна</strong>.
+            Государственное учреждение образования <strong>«Гимназия №6 г. Минска»</strong> — это современное учебное заведение с богатой историей, основанное на базе общеобразовательной школы №6 в 1991 году. Гимназия известна высоким уровнем образования, с 2024 года ее возглавляет директор <strong>Казак Наталья Болеслоавовна</strong>.
         </p>
         <p>
-            Гимназия расположена в нескольких учебных корпусах в Советском районе столицы. Учреждение активно развивает систему <strong>идеологической и воспитательной работы</strong>, ключевыми элементами которой являются <strong>Музей «Вооруженные Силы Республики Беларусь»</strong> и <strong>Военно-патриотический клуб «Гранит»</strong>. 
-        </p>
+            Гимназия располагается в трех учебных корпусах в Советском районе столицы. Учреждение активно развивает систему <strong>идеологической и воспитательной работы</strong>. На базе гимназии существуют такие структуры, как <strong>отряд БРПО имени Зинаиды Портновой</strong>, <strong>военно-патриотический клуб «Гранит»</strong>,
+         <strong>первичная организация ОО БРСМ Гимназии № 6 г. Минска</strong>, </strong>первичная организация РОО "Белая Русь" ГУО "Гимназии N6"</strong>.</p>
         <p>
-            <strong>Руководителем по военно-патриотическому воспитанию</strong> в гимназии является ответственный за деятельность ВПК «Гранит» и работу музея.
+            <strong>Руководителем по военно-патриотическому воспитанию</strong> в гимназии является полковник запаса Вооруженных Сил Республики Беларусь </strong>Халипов Сергей Сергеевич</strong>. Руководитель по военно-патриотическому воспитанию является руководителем ВПК «Гранит», отвестсвеннным за военно-патриотическое воспитание молодежи, а также за функционирование музея.
         </p>
     </section>
 
@@ -64,13 +64,17 @@
         <p>
             Основные <strong>цели</strong> клуба:
             <ul>
-                <li>Изучение истории Республики Беларусь и военно-патриотических традиций белорусской армии.</li>
-                <li>Подготовка учащихся к службе в Вооруженных Силах Республики Беларусь.</li>
-                <li>Повышение авторитета и престижа военной службы.</li>
+                <li>изучение истории Республики Беларусь и всестороннее знакомство с военно-патриотическими традициями белорусской армии;</li>
+                <li>подготовка учащихся к службе в Вооруженных Силах Республики Беларусь;</li>
+                <li>организация летних лагерей военно-патриотической и туристско-краеведческой направленности;</li>
+                <li>проведение поездок и туристических походов по историческим местам Республики Беларусь;</li>
+                <li>организация и проведение военно-спортивных игр, соревнований, конкурсов;</li>
+                <li>информационно-издательская деятельность в области развития гражданственности и патриотизма молодежи;</li>
+                <li>оказание шефской помощи ветеранам Великой Отечественной войны, труда и правоохранительных органов; семьям военнослужащих, погибших при исполнении воинского долга.</li>
             </ul>
         </p>
         <p>
-            Руководителем клуба является <strong>руководитель по военно-патриотическому воспитанию</strong> гимназии. Деятельность ВПК «Гранит» направлена на формирование гражданственности и патриотизма через практические занятия и изучение истории.
+            Руководителем клуба является <strong>руководитель по военно-патриотическому воспитанию - Сергей Сергеевич Халипов</strong>. Деятельность ВПК «Гранит» направлена на формирование гражданственности и патриотизма через практические занятия и изучение истории.
         </p>
     </section>
 
