--- a/templates/index.html
+++ b/templates/index.html
@@ -52,17 +52,19 @@
     </section>
 
     <section id="about" class="section about">
-        <h1>Гимназия №6 г. Минска</h1>
-        <p>
-            Государственное учреждение образования <strong>«Гимназия №6 г. Минска»</strong> — это современное учебное заведение с богатой историей, основанное на базе общеобразовательной школы №6 в 1991 году. Гимназия известна высоким уровнем образования, с 2024 года ее возглавляет директор <strong>Казак Наталья Болеслоавовна</strong>.
-        </p>
-        <p>
-            Гимназия располагается в трех учебных корпусах в Советском районе столицы. Учреждение активно развивает систему <strong>идеологической и воспитательной работы</strong>. На базе гимназии существуют такие структуры, как <strong>отряд БРПО имени Зинаиды Портновой</strong>, <strong>военно-патриотический клуб «Гранит»</strong>,
-         <strong>первичная организация ОО БРСМ Гимназии № 6 г. Минска</strong>, </strong>первичная организация РОО "Белая Русь" ГУО "Гимназии N6"</strong>.</p>
-        <p>
-            <strong>Руководителем по военно-патриотическому воспитанию</strong> в гимназии является полковник запаса Вооруженных Сил Республики Беларусь </strong>Халипов Сергей Сергеевич</strong>. Руководитель по военно-патриотическому воспитанию является руководителем ВПК «Гранит», отвестсвеннным за военно-патриотическое воспитание молодежи, а также за функционирование музея.
-        </p>
-    </section>
+        <div class="section-content show">
+            <h1>Гимназия №6 г. Минска</h1>
+            <p>
+                Государственное учреждение образования <strong>«Гимназия №6 г. Минска»</strong> — это современное учебное заведение с богатой историей, основанное на базе общеобразовательной школы №6 в 1991 году. Гимназия известна высоким уровнем образования, с 2024 года ее возглавляет директор <strong>Казак Наталья Болеслоавовна</strong>.
+            </p>
+            <p>
+                Гимназия располагается в трех учебных корпусах в Советском районе столицы. Учреждение активно развивает систему <strong>идеологической и воспитательной работы</strong>. На базе гимназии существуют такие структуры, как <strong>отряд БРПО имени Зинаиды Портновой</strong>, <strong>военно-патриотический клуб «Гранит»</strong>,
+             <strong>первичная организация ОО БРСМ Гимназии № 6 г. Минска</strong>, </strong>первичная организация РОО "Белая Русь" ГУО "Гимназии N6"</strong>.</p>
+            <p>
+                <strong>Руководителем по военно-патриотическому воспитанию</strong> в гимназии является полковник запаса Вооруженных Сил Республики Беларусь </strong>Халипов Сергей Сергеевич</strong>. Руководитель по военно-патриотическому воспитанию является руководителем ВПК «Гранит», отвестсвеннным за военно-патриотическое воспитание молодежи, а также за функционирование музея.
+            </p>
+        </div>
+        </section>
 
     <div class="section-divider"></div>
 
@@ -87,25 +89,27 @@
     <div class="section-divider"></div>
 
     <section id="vpk" class="section vpk">
-        <h2>Военно-патриотический клуб «Гранит»</h2>
-        <p>
-            <strong>ВПК «Гранит»</strong> был создан на базе Гимназии №6 г. Минска с целью <strong>военно-патриотического воспитания</strong> молодежи. Клуб имеет собственные <strong>отличительные символы и атрибуты</strong> (наименование, девиз, эмблема, форма).
-        </p>
-        <p>
-            Основные <strong>цели</strong> клуба:
-            <ul>
-                <li>изучение истории Республики Беларусь и всестороннее знакомство с военно-патриотическими традициями белорусской армии;</li>
-                <li>подготовка учащихся к службе в Вооруженных Силах Республики Беларусь;</li>
-                <li>организация летних лагерей военно-патриотической и туристско-краеведческой направленности;</li>
-                <li>проведение поездок и туристических походов по историческим местам Республики Беларусь;</li>
-                <li>организация и проведение военно-спортивных игр, соревнований, конкурсов;</li>
-                <li>информационно-издательская деятельность в области развития гражданственности и патриотизма молодежи;</li>
-                <li>оказание шефской помощи ветеранам Великой Отечественной войны, труда и правоохранительных органов; семьям военнослужащих, погибших при исполнении воинского долга.</li>
-            </ul>
-        </p>
-        <p>
-            Руководителем клуба является <strong>руководитель по военно-патриотическому воспитанию - Сергей Сергеевич Халипов</strong>. Деятельность ВПК «Гранит» направлена на формирование гражданственности и патриотизма через практические занятия и изучение истории.
-        </p>
+        <div class="section-content">
+            <h2>Военно-патриотический клуб «Гранит»</h2>
+            <p>
+                <strong>ВПК «Гранит»</strong> был создан на базе Гимназии №6 г. Минска с целью <strong>военно-патриотического воспитания</strong> молодежи. Клуб имеет собственные <strong>отличительные символы и атрибуты</strong> (наименование, девиз, эмблема, форма).
+            </p>
+            <p>
+                Основные <strong>цели</strong> клуба:
+                <ul>
+                    <li>изучение истории Республики Беларусь и всестороннее знакомство с военно-патриотическими традициями белорусской армии;</li>
+                    <li>подготовка учащихся к службе в Вооруженных Силах Республики Беларусь;</li>
+                    <li>организация летних лагерей военно-патриотической и туристско-краеведческой направленности;</li>
+                    <li>проведение поездок и туристических походов по историческим местам Республики Беларусь;</li>
+                    <li>организация и проведение военно-спортивных игр, соревнований, конкурсов;</li>
+                    <li>информационно-издательская деятельность в области развития гражданственности и патриотизма молодежи;</li>
+                    <li>оказание шефской помощи ветеранам Великой Отечественной войны, труда и правоохранительных органов; семьям военнослужащих, погибших при исполнении воинского долга.</li>
+                </ul>
+            </p>
+            <p>
+                Руководителем клуба является <strong>руководитель по военно-патриотическому воспитанию - Сергей Сергеевич Халипов</strong>. Деятельность ВПК «Гранит» направлена на формирование гражданственности и патриотизма через практические занятия и изучение истории.
+            </p>
+        </div>
     </section>
 
     <div class="section-divider"></div>
