--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,7 @@
         <nav class="nav">
             <a href="#about">О гимназии</a>
             <a href="#museum">Музей</a>
+            <a href="/museum-map">Интерактивная карта</a>
             <a href="#vpk">ВПК «Гранит»</a>
             <a href="#contacts">Контакты</a>
         </nav>
@@ -91,7 +92,13 @@
             <p>
                 В экспозиции представлены уникальные <strong>экспонаты</strong>, переданные сотрудниками, родителями учащихся, а также организациями-партнерами. Музей имеет несколько разделов, посвященных <strong>истории белорусской армии</strong>, начиная с 1918 года. Он служит важным центром <strong>музейной педагогики</strong> для формирования у ребят национального стержня, готовности защищать Родину и беречь мир.
             </p>
-        </div>
+            
+            <div class="button-container" style="text-align: center; margin-top: 30px;">
+                <a href="/museum-map" class="btn primary-btn">
+                    Интерактивная карта музея <i class="fas fa-map-marked-alt"></i>
+                </a>
+            </div>
+            </div>
     </section>
 
     <div class="section-divider"></div>
