--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
         <div class="section-content show">
             <h1>Гимназия №6 г. Минска</h1>
             <p>
-                Государственное учреждение образования <strong>«Гимназия №6 г. Минска»</strong> — это современное учебное заведение с богатой историей, основанное на базе общеобразовательной школы №6 в 1991 году. Гимназия известна высоким уровнем образования, с 2024 года ее возглавляет директор <strong>Казак Наталья Болеслоавовна</strong>.
+                Государственное учреждение образования <strong>«Гимназия №6 г. Минска»</strong> — это современное учебное заведение с богатой историей, основанное на базе общеобразовательной школы №6 в 1991 году. Гимназия известна высоким уровнем образования, с 2024 года ее возглавляет директор <strong>Казак Наталья Болеславовна</strong>.
             </p>
             <p>
                 Гимназия располагается в трех учебных корпусах в Советском районе столицы. Учреждение активно развивает систему <strong>идеологической и воспитательной работы</strong>. На базе гимназии существуют такие структуры, как <strong>отряд БРПО имени Зинаиды Портновой</strong>, <strong>военно-патриотический клуб «Гранит»</strong>,
